// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`double axis - two metrics: snapshot test 1`] = `
Array [
  Object {
    "height": 4,
    "properties": Object {
      "annotations": Object {
        "horizontal": Array [
          Object {
            "value": 42,
            "yAxis": "left",
          },
          Object {
            "value": 66,
            "yAxis": "right",
          },
        ],
        "vertical": Array [
          Object {
            "color": "123456",
            "fill": "before",
            "label": "Custom vertical annotation",
            "value": "2021-07-29T02:31:09.890Z",
          },
        ],
      },
      "end": undefined,
      "legend": undefined,
      "liveData": undefined,
      "metrics": Array [
        DropEmptyObjectAtTheEndOfAnArray {
          "creationStack": Array [
            "stack traces disabled",
          ],
          "value": Array [
            "Dummy",
            "Metric1",
          ],
        },
      ],
      "period": undefined,
      "region": undefined,
      "setPeriodToTimeRange": undefined,
      "stacked": undefined,
      "start": undefined,
      "stat": undefined,
      "title": "double axis - two metrics",
      "view": "timeSeries",
      "yAxis": Object {
        "left": Object {
          "max": 1,
          "min": 0,
        },
        "right": Object {
          "max": 200,
          "min": 100,
        },
      },
    },
    "type": "metric",
    "width": 4,
    "x": undefined,
    "y": undefined,
  },
]
`;

exports[`single axis - single metric: snapshot test 1`] = `
Array [
  Object {
    "height": 4,
    "properties": Object {
      "annotations": Object {
        "horizontal": Array [
          Object {
            "value": 42,
            "yAxis": "left",
          },
        ],
        "vertical": undefined,
      },
      "end": undefined,
      "legend": Object {
        "position": "hidden",
      },
      "liveData": undefined,
      "metrics": Array [
        DropEmptyObjectAtTheEndOfAnArray {
          "creationStack": Array [
            "stack traces disabled",
          ],
          "value": Array [
            "Dummy",
            "Metric1",
          ],
        },
      ],
      "period": undefined,
      "region": undefined,
      "setPeriodToTimeRange": undefined,
      "stacked": undefined,
      "start": undefined,
      "stat": undefined,
      "title": "single axis - single metric",
      "view": "timeSeries",
      "yAxis": Object {
        "left": Object {
          "max": 1,
          "min": 0,
        },
        "right": undefined,
      },
    },
    "type": "metric",
    "width": 4,
    "x": undefined,
    "y": undefined,
  },
]
`;

exports[`single axis - two metrics: snapshot test 1`] = `
Array [
  Object {
    "height": 4,
    "properties": Object {
      "annotations": Object {
        "horizontal": Array [
          Object {
            "value": 42,
            "yAxis": "left",
          },
        ],
        "vertical": Array [
          Object {
            "color": "123456",
            "fill": "before",
            "label": "Custom vertical annotation",
            "value": "2021-07-29T02:31:09.890Z",
          },
        ],
      },
      "end": undefined,
      "legend": undefined,
      "liveData": undefined,
      "metrics": Array [
        DropEmptyObjectAtTheEndOfAnArray {
          "creationStack": Array [
            "stack traces disabled",
          ],
          "value": Array [
            "Dummy",
            "Metric1",
          ],
        },
        DropEmptyObjectAtTheEndOfAnArray {
          "creationStack": Array [
            "stack traces disabled",
          ],
          "value": Array [
            "Dummy",
            "Metric2",
          ],
        },
      ],
      "period": undefined,
      "region": undefined,
      "setPeriodToTimeRange": undefined,
      "stacked": undefined,
      "start": undefined,
      "stat": undefined,
      "title": "single axis - two metrics",
      "view": "timeSeries",
      "yAxis": Object {
        "left": Object {
          "max": 1,
          "min": 0,
        },
        "right": undefined,
      },
    },
    "type": "metric",
    "width": 4,
    "x": undefined,
    "y": undefined,
  },
]
`;
